--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ build = "build.rs"
 [dependencies]
 log = "0.3.6"
 kernel32-sys = "0.2.2"
+user32-sys = "0.2.0"
 
 [dependencies.glfw]
 version = "0.11.0"
